Adding default gpl notice at begining of each file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
-  "cmake.configureOnOpen": false
+  "cmake.configureOnOpen": false,
+  "fileHeaderComment.template":{
+    "*":[
+        "${commentbegin}",
+        "${commentprefix} Created on ${date}",
+        "${commentprefix}",
+        "${commentprefix} ${gpl_v3.0}",
+        "${commentend}"
+    ]
+  },
+  "files.trimTrailingWhitespace": true,
+  
+
 }
